Add documentation Add switch between representations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 S3method("[",mfactor)
 S3method("[[",mfactor)
-S3method(as.character,mformat)
+S3method(as.character,mfactor)
 S3method(as.data.frame,mfactor)
 S3method(as.mfactor,default)
 S3method(format,mfactor)
-S3method(unique,mformat)
+S3method(unique,mfactor)
 export("mlevels<-")
+export("representation<-")
 export(as.mfactor)
 export(mfactor)
-export(unlistMformat)
+export(unlistMfactor)
+exportClasses(mfactor)
