Fix bug when accessing a mfactor with [ or [[

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("[",mfactor)
 S3method("[[",mfactor)
 S3method(as.character,mfactor)
 S3method(as.data.frame,mfactor)
+S3method(as.integer,mfactor)
 S3method(as.mfactor,default)
 S3method(format,mfactor)
 S3method(unique,mfactor)
